--- a/src/OfficeTransliterator/OfficeTransliteratorWeb/App/Home/Home.html
+++ b/src/OfficeTransliterator/OfficeTransliteratorWeb/App/Home/Home.html
@@ -22,11 +22,11 @@
     <script src="Home.js" type="text/javascript"></script>
 </head>
 <body>
-    <div id="content-header">
+    <!--<div id="content-header">
         <div class="padding">
-            <h1>Office Transliterator</h1>
+            <h1>Transliterator</h1>
         </div>
-    </div>
+    </div>-->
     <div id="content-main">
         <div class="padding">
             <input type="button" value="Ћирилица -> Latinica" id="btnCyrlToLatn" style="margin: 10px; padding: 0; width: 180px;" />
